Add further aria-labels. Add screenshots to readme file.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <header>
             <nav>
                 <div class="col-lg-auto">
-                    <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
+                    <h1><a href="index.html" class="signature" aria-label="Click this name logo to return to the landing page.">Daniel Harman</a></h1> 
                 </div>
                 <div class="col-lg-auto">                   
                 <ul>
-                    <li class="about"><a href="pages/about.html">About</a></li>
-                    <li class="contact"><a href="pages/contact.html">Contact</a></li>
+                    <li class="about"><a href="pages/about.html" aria-label>About</a></li>
+                    <li class="contact"><a href="pages/contact.html" aria-label>Contact</a></li>
                 </ul>
                 </div>
             </nav>
@@ -38,19 +38,19 @@
             <div class="row justify-content-lg-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-one.html"><img src="assets/singular-medium-coral-vase-red-glaze-white-backdrop.jpg" alt="A photograph of a organic red ceramic vase"></a>
+                        <a href="pages/project-one.html"><img src="assets/singular-medium-coral-vase-red-glaze-white-backdrop.jpg" alt="A photograph of a organic red ceramic vase" aria-label="Click the image to be taken to project one page."></a>
                         <h3>Project One</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-two.html"><img src="assets/two-ceramic-white-mugs.jpg" alt="A photograph of two ceramic mugs."></a>
+                        <a href="pages/project-two.html"><img src="assets/two-ceramic-white-mugs.jpg" alt="A photograph of two ceramic mugs." aria-label="Click the image to be taken to project two page."></a>
                         <h3>Project Two</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-three.html"><img src="assets/blue-vase-with-flower-arrangement-on-a-white-backdrop.jpg" alt="A blue vase with a flower arrangement on a white backdrop"></a>
+                        <a href="pages/project-three.html"><img src="assets/blue-vase-with-flower-arrangement-on-a-white-backdrop.jpg" alt="A blue vase with a flower arrangement on a white backdrop" aria-label="Click the image to be taken to project three page."></a>
                         <h3>Project Three</h3>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-four.html"><img src="assets/organic-abstract-vase-in-black-shiney-glaze.jpg" alt="A organic abstract vase in a shiney black vase."></a>
+                        <a href="pages/project-four.html"><img src="assets/organic-abstract-vase-in-black-shiney-glaze.jpg" alt="A organic abstract vase in a shiney black vase." aria-label="Click the image to be taken to project four page."></a>
                         <h3>Project Four</h3>
                     </div>
                     </div>
