--- a/pages/project-one.html
+++ b/pages/project-one.html
@@ -17,7 +17,7 @@
         <header>
             <nav>
                 <div class="col-lg-auto">
-                    <h1><a href="../index.html" class="signature">Daniel Harman</a></h1> 
+                    <h1><a href="../index.html" class="signature" aria-label="Click this name logo to return to the landing page.">Daniel Harman</a></h1> 
                 </div>
                 <div class="col-lg-auto">                   
                     <ul>
