--- a/pages/project-two.html
+++ b/pages/project-two.html
@@ -18,12 +18,12 @@
         <header>
             <nav>
                 <div class="col-lg-auto">
-                    <h1><a href="../index.html" class="signature">Daniel Harman</a></h1> 
+                    <h1><a href="../index.html" class="signature" aria-label="Click this name logo to return to the landing page.">Daniel Harman</a></h1> 
                 </div>
                 <div class="col-lg-auto">                   
                     <ul>
-                        <li class="about"><a href="./about.html">About</a></li>
-                        <li class="contact"><a href="./contact.html">Contact</a></li>
+                        <li class="about"><a href="./about.html" aira-label="Click to go to about page.">About</a></li>
+                        <li class="contact"><a href="./contact.html"aira-label="Click to go to contact page.">Contact</a></li>
                     </ul>
                 </div>
             </nav>
