Fix aria labels, impliment validation screenshots to read me file. Edited readme file.

--- a/pages/project-four.html
+++ b/pages/project-four.html
@@ -18,8 +18,8 @@
                 </div>
                 <div class="col-lg-auto">                   
                     <ul>
-                        <li class="about"><a href="./about.html">About</a></li>
-                        <li class="contact"><a href="./contact.html">Contact</a></li>
+                        <li class="about"><a href="./about.html" aria-label="Click this to be taken to the about page.">About</a></li>
+                        <li class="contact"><a href="./contact.html" aria-label="Click to be taken to contact page.">Contact</a></li>
                     </ul>
                 </div>
             </nav>
