--- a/pages/about.html
+++ b/pages/about.html
@@ -24,8 +24,8 @@
         </div>
         <div class="col-lg-auto">
           <ul>
-            <li class="about"><a href="./about.html">About</a></li>
-            <li class="contact"><a href="./contact.html">Contact</a></li>
+            <li class="about"><a href="./about.html" aria-label="Click this to be taken to the about page.">About</a></li>
+            <li class="contact"><a href="./contact.html" aria-label="Click to be taken to contact page.">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -65,7 +65,7 @@
     </div>
     <div class="row">
       <div class="col-6">
-        <video id="about_video" width="450" height200 controls>
+        <video id="about_video" width="450" height="200" controls>
           <source src="../assets/45455-443133824_small.mp4">Your browser does not support this video.
         </video>
       </div>
