--- a/pages/project-two.html
+++ b/pages/project-two.html
@@ -22,8 +22,8 @@
                 </div>
                 <div class="col-lg-auto">                   
                     <ul>
-                        <li class="about"><a href="./about.html" aira-label="Click to go to about page.">About</a></li>
-                        <li class="contact"><a href="./contact.html"aira-label="Click to go to contact page.">Contact</a></li>
+                        <li class="about"><a href="./about.html" aria-label="Click to be taken to the about page.">About</a></li>
+                        <li class="contact"><a href="./contact.html" aria-label="Click to be taken to contact page.">Contact</a></li>
                     </ul>
                 </div>
             </nav>
