Edited readme file, added validation screenshots

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
         <input class="cform" type="email" id="email" name="email" placeholder="Email">
         <label for="add-info"></label>
         <textarea class="cform" id="add-info" name="add-info" rows="15" cols="45" placeholder="Further Information"></textarea>
-        <input class="cform" type="submit" value="Submit">
+        <input class="cform" type="submit" value="Submit" aria-label="click here to submit completed form">
     </form>
     </div>
     </div>
