Update landing page images with explicit height and width

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <main>
         <div class="row justify-content-center">
             <div class="col-lg-auto">
-                <img id="cover" src="assets/blue-vase-cover-photo.jpg" alt="photograph of a blue vase">
+                <img id="cover" src="assets/blue-vase-cover-photo.jpg" width="800px" height="564px" alt="photograph of a blue vase">
             </div>
 
             <div class="row justify-content-lg-center">
                 <div class="col-lg-auto">
                     <div class="landing">
                         <a href="pages/project-one.html"><img
-                                src="assets/singular-medium-coral-vase-red-glaze-white-backdrop.jpg"
+                                src="assets/singular-medium-coral-vase-red-glaze-white-backdrop.jpg" height="300px" width="240px"
                                 alt="A photograph of a organic red ceramic vase"
                                 aria-label="Click the image to be taken to project one page."></a>
                         <h3>Project One</h3>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-two.html"><img src="assets/two-ceramic-white-mugs.jpg"
+                        <a href="pages/project-two.html"><img src="assets/two-ceramic-white-mugs.jpg" height="300px" width="399px"
                                 alt="A photograph of two ceramic mugs."
                                 aria-label="Click the image to be taken to project two page."></a>
                         <h3>Project Two</h3>
@@ -62,7 +62,7 @@
                 <div class="col-lg-auto">
                     <div class="landing">
                         <a href="pages/project-three.html"><img
-                                src="assets/blue-vase-with-flower-arrangement-on-a-white-backdrop.jpg"
+                                src="assets/blue-vase-with-flower-arrangement-on-a-white-backdrop.jpg" height="300px" width="177px"
                                 alt="A blue vase with a flower arrangement on a white backdrop"
                                 aria-label="Click the image to be taken to project three page."></a>
                         <h3>Project Three</h3>
@@ -73,7 +73,7 @@
                 <div class="col-lg-auto">
                     <div class="landing">
                         <a href="pages/project-four.html"><img
-                                src="assets/organic-abstract-vase-in-black-shiney-glaze.jpg"
+                                src="assets/organic-abstract-vase-in-black-shiney-glaze.jpg" height="300px" width="240px"
                                 alt="A organic abstract vase in a shiney black vase."
                                 aria-label="Click the image to be taken to project four page."></a>
                         <h3>Project Four</h3>
